logs/dag_id=insert_date/run_id=manual__2025-01-10T145846.838132+0000/task_id=sql_md_ledger_account_s/attempt=1.log
[2025-01-10T14:58:53.276+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: insert_date.sql_md_ledger_account_s manual__2025-01-10T14:58:46.838132+00:00 [queued]>
[2025-01-10T14:58:53.289+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: insert_date.sql_md_ledger_account_s manual__2025-01-10T14:58:46.838132+00:00 [queued]>
[2025-01-10T14:58:53.290+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 3
[2025-01-10T14:58:53.449+0000] {taskinstance.py:2191} INFO - Executing <Task(SQLExecuteQueryOperator): sql_md_ledger_account_s> on 2025-01-10 14:58:46.838132+00:00
[2025-01-10T14:58:53.455+0000] {standard_task_runner.py:60} INFO - Started process 1098 to run task
[2025-01-10T14:58:53.458+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'insert_date', 'sql_md_ledger_account_s', 'manual__2025-01-10T14:58:46.838132+00:00', '--job-id', '1557', '--raw', '--subdir', 'DAGS_FOLDER/insert_data.py', '--cfg-path', '/tmp/tmp_n72rpkx']
[2025-01-10T14:58:53.461+0000] {standard_task_runner.py:88} INFO - Job 1557: Subtask sql_md_ledger_account_s
[2025-01-10T14:58:53.509+0000] {task_command.py:423} INFO - Running <TaskInstance: insert_date.sql_md_ledger_account_s manual__2025-01-10T14:58:46.838132+00:00 [running]> on host 711845a6becd
[2025-01-10T14:58:53.600+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='budanovsa' AIRFLOW_CTX_DAG_ID='insert_date' AIRFLOW_CTX_TASK_ID='sql_md_ledger_account_s' AIRFLOW_CTX_EXECUTION_DATE='2025-01-10T14:58:46.838132+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-01-10T14:58:46.838132+00:00'
[2025-01-10T14:58:53.601+0000] {sql.py:276} INFO - Executing: INSERT INTO ds.md_ledger_account_s( 
    chapter
    ,chapter_name
	,section_number
	,section_name
	,subsection_name
	,ledger1_account
	,ledger1_account_name
	,ledger_account 
	,ledger_account_name 
	,characteristic
	,start_date
	,end_date
)
SELECT
	mlas."CHAPTER"
	, mlas."CHAPTER_NAME"
	, mlas."SECTION_NUMBER"
	, mlas."SECTION_NAME"
	, mlas."SUBSECTION_NAME"
	, mlas."LEDGER1_ACCOUNT"
	, mlas."LEDGER1_ACCOUNT_NAME"
	, mlas."LEDGER_ACCOUNT"
	, mlas."LEDGER_ACCOUNT_NAME"
	, mlas."CHARACTERISTIC"
	, to_date(mlas."START_DATE", '%Y-%m-%d')
	, to_date(mlas."END_DATE", '%Y-%m-%d')
  FROM stage.md_ledger_account_s mlas
 WHERE mlas."LEDGER_ACCOUNT" IS NOT NULL
   AND mlas."START_DATE" IS NOT NULL
on conflict on constraint md_ledger_account_s_pkey
	set chapter=excluded.chapter
    ,chapter_name=excluded.chapter_name
	,section_number=ecxluded.section_number
	,section_name=excluded.section_name
	,subsection_name=excluded.subsection_name
	,ledger1_account=excluded.ledger1_account
	,ledger1_account_name=excluded.ledger1_account_name
	,ledger_account_name=excluded.ledger_account_name 
	,characteristic=excluded.characteristic
	,end_date=excluded.end_date; 
[2025-01-10T14:58:53.609+0000] {base.py:83} INFO - Using connection ID 'postgres-db' for task execution.
[2025-01-10T14:58:53.617+0000] {base.py:83} INFO - Using connection ID 'postgres-db' for task execution.
[2025-01-10T14:58:53.685+0000] {sql.py:450} INFO - Running statement: INSERT INTO ds.md_ledger_account_s( 
    chapter
    ,chapter_name
	,section_number
	,section_name
	,subsection_name
	,ledger1_account
	,ledger1_account_name
	,ledger_account 
	,ledger_account_name 
	,characteristic
	,start_date
	,end_date
)
SELECT
	mlas."CHAPTER"
	, mlas."CHAPTER_NAME"
	, mlas."SECTION_NUMBER"
	, mlas."SECTION_NAME"
	, mlas."SUBSECTION_NAME"
	, mlas."LEDGER1_ACCOUNT"
	, mlas."LEDGER1_ACCOUNT_NAME"
	, mlas."LEDGER_ACCOUNT"
	, mlas."LEDGER_ACCOUNT_NAME"
	, mlas."CHARACTERISTIC"
	, to_date(mlas."START_DATE", '%Y-%m-%d')
	, to_date(mlas."END_DATE", '%Y-%m-%d')
  FROM stage.md_ledger_account_s mlas
 WHERE mlas."LEDGER_ACCOUNT" IS NOT NULL
   AND mlas."START_DATE" IS NOT NULL
on conflict on constraint md_ledger_account_s_pkey
	set chapter=excluded.chapter
    ,chapter_name=excluded.chapter_name
	,section_number=ecxluded.section_number
	,section_name=excluded.section_name
	,subsection_name=excluded.subsection_name
	,ledger1_account=excluded.ledger1_account
	,ledger1_account_name=excluded.ledger1_account_name
	,ledger_account_name=excluded.ledger_account_name 
	,characteristic=excluded.characteristic
	,end_date=excluded.end_date; , parameters: None
[2025-01-10T14:58:53.689+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 398, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 455, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: ОШИБКА:  ошибка синтаксиса (примерное положение: "set")
LINE 32:  set chapter=excluded.chapter
          ^

[2025-01-10T14:58:53.699+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=insert_date, task_id=sql_md_ledger_account_s, execution_date=20250110T145846, start_date=20250110T145853, end_date=20250110T145853
[2025-01-10T14:58:53.715+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 1557 for task sql_md_ledger_account_s (ОШИБКА:  ошибка синтаксиса (примерное положение: "set")
LINE 32:  set chapter=excluded.chapter
          ^
; 1098)
[2025-01-10T14:58:53.752+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-01-10T14:58:53.809+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
